--- a/Machine Learning and AI/Image classification in Pytorch - Imagenet10/AI_1.ipynb
+++ b/Machine Learning and AI/Image classification in Pytorch - Imagenet10/AI_1.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## COMP5623 Coursework on Image Classification with Convolutional Neural Networks \n",
+        "## Image Classification with Convolutional Neural Networks \n",
         "\n",
         "Starter code."
       ]
@@ -79,9 +79,9 @@
       "source": [
         "### Filter Visualization\n",
         "\n",
-        "The first part of the assignment is to build a CNN and train it on a subset of the ImageNet dataset. We will first create a dataframe with all the references to the images and their labels.\n",
+        "The first part of this project is to build a CNN and train it on a subset of the ImageNet dataset. We will first create a dataframe with all the references to the images and their labels.\n",
         "\n",
-        "To download the images into your work environment, clone into a git respository containing the images."
+        "To download the images into your work environment, we clone into a git respository containing the images."
       ]
     },
     {
@@ -477,7 +477,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now let's create the transforms to normalise and turn our data into tensors."
+        "Now we will create the transforms to normalise and turn our data into tensors."
       ]
     },
     {
@@ -505,7 +505,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Let's split the data into train and test sets and instantiate our new ISIC_Dataset objects."
+        "We split the data into train and test sets and instantiate our new ISIC_Dataset objects."
       ]
     },
     {
